deployments/echo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: echo
spec:
  containers:
    - name: service
      image: docker.io/library/xds-echo:latest
      imagePullPolicy: Never
    - name: sidecar
      image: envoyproxy/envoy:v1.23-latest
      ports:
        - name: http
          containerPort: 80
          protocol: TCP
      volumeMounts:
        - name: envoy-config
          mountPath: "/etc/envoy"
          readOnly: true
  volumes:
    - name: envoy-config
      configMap:
        name: envoy-config
---
apiVersion: v1
data:
  envoy.yaml: |+
    admin:
      access_log_path: /tmp/admin_access.log
      address:
        socket_address: { address: 0.0.0.0, port_value: 9901 }
    
    node:
      cluster: xds-cluster
      id: "echo"

    dynamic_resources:
      cds_config:
        resource_api_version: V3
        ads: {}
      lds_config:
        resource_api_version: V3
        ads: {} 
      ads_config:
        api_type: GRPC
        transport_api_version: V3
        grpc_services:
          envoy_grpc:
            cluster_name: xds_cluster 
   
    static_resources:
      clusters:
      - name: xds_cluster
        connect_timeout: 5s
        type: STRICT_DNS 
        lb_policy: ROUND_ROBIN
        typed_extension_protocol_options:
          envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
            "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
            explicit_http_config:
              http2_protocol_options: {}
                # connection_keepalive:
                #   interval: 5s
                #   timeout: 3s
        upstream_connection_options:
          tcp_keepalive:
            keepalive_probes: 1
            keepalive_time: 10
            keepalive_interval: 10
        load_assignment:
          cluster_name: xds_cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: host.minikube.internal
                    port_value: 18000 

kind: ConfigMap
metadata:
  name: envoy-config
